2004-05-10  Thien-Thi Nguyen  <ttn@gnu.org>

	* cvtmail.c, yow.c: Include config.h.

2004-05-10  Thien-Thi Nguyen  <ttn@gnu.org>

	* test-distrib.c (main): For failing cases, exit with `EXIT_FAILURE'.

2004-05-10  Thien-Thi Nguyen  <ttn@gnu.org>

	* test-distrib.c: Conditionally include fcntl.h.

2004-05-09  Thien-Thi Nguyen  <ttn@gnu.org>

	* cvtmail.c: Throughout, replace 0 destined for `exit' arg
	with `EXIT_SUCCESS'.  Likewise, replace 1 with `EXIT_FAILURE'.
	(main): Use `EXIT_SUCCESS' or `EXIT_FAILURE' for return value.

	* ebrowse.c, emacsclient.c, emacsserver.c, fakemail.c,
	hexl.c, make-docfile.c, movemail.c, profile.c, sorted-doc.c,
	test-distrib.c, yow.c: Likewise.

2004-05-08  Thien-Thi Nguyen  <ttn@gnu.org>

	* etags.c: [VMS] Include lib$routines.h.

2004-05-08  Thien-Thi Nguyen  <ttn@gnu.org>

	* b2m.c (GOOD, BAD): Delete macros.  Throughout,
	replace w/ `EXIT_SUCCESS' and `EXIT_FAILURE', respectively.
	(main): Use `EXIT_SUCCESS' or `EXIT_FAILURE' for return value.

	* etags.c: Likewise.

2004-05-07  Thien-Thi Nguyen  <ttn@gnu.org>

	* b2m.c: Properly spell the name of Emacs.
	(main): Parenthesize assignment when used
	as truth value to prevent gcc warnings.

2004-05-04  Thien-Thi Nguyen  <ttn@gnu.org>

	* profile.c: Include config.h, not ../src/config.h.
	Include systime.h, not ../src/systime.h.

2002-03-16  Eli Zaretskii  <eliz@is.elta.co.il>

	* Version 21.2 released.

2002-03-12  Francesco Potorti`  <pot@gnu.org>

	* etags.c (Python_functions): Skip spaces at beginning of lines.

2002-02-15  Richard M. Stallman  <rms@gnu.org>

	* cvtmail.c (xrealloc): Always pass two args to `fatal'.

	* movemail.c (popmail): Always pass two args to `error'.

2002-02-15  Gerd Moellmann  <gerd@gnu.org>

	* emacsserver.c (main): Cast geteuid in sprintf to int.

	* emacsclient.c (main): Cast isdigit argument to unsigned char.

2002-02-10  Paul Eggert  <eggert@twinsun.com>

	* rcs-checkin: Use `sort -k 2', not `sort +1', as POSIX 1003.1-2001
	disallows the old syntax.
